# promptwright

./: .gitignore  Makefile  README.md  codecov.yml  coverage.xml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yaml  test.yml
examples/: __init__.py  basic_prompt.py  coding.py  creative_writing.py  example_basic_prompt.py  example_basic_prompt.yaml  example_basic_question.py  example_creative_writing.py  example_culinary_database.py  example_culinary_database.yaml  example_generate_questions.py  example_historic_figures.py  example_historic_figures.yaml  example_programming_challenges.py  example_programming_challenges.py.yaml  example_push_to_hf_hub.py  example_redteam_scenarios_dataset.py  example_scientific_experiments.py  example_with_hf.yaml  push_to_hf_hub.py  science.py
promptsmith/: __init__.py  hf_hub.py  topic_tree.py
promptweaver/: __init__.py  dataset.py
promptwright/: __init__.py  __main__.py  cli.py  config.py  dataset.py  engine.py  hf_hub.py  ollama_client.py  prompts.py  topic_tree.py  utils.py
tests/: conftest.py  test_cli.py  test_config.py  test_dataset.py  test_engine.py  test_hf_hub.py  test_ollama_client.py
tests/integration/: __init__.py  congtest.py  helpers.py  ollama_integration.py  test_basic_integration.py  test_dataset_integration.py  test_end_to_end.py
